# libro-code-interpreter

./: .vercelignore  README.md  README.zh-CN.md  package.json  pnpm-workspace.yaml  pyproject.toml
libro-client/: README.md  pyproject.toml
libro-client/src/libro_client/: __init__.py  client.py  code_executor.py  file_executor.py  kernel.py  libro_client.py  test.py
libro-code-interpreter/: pyproject.toml
libro-code-interpreter/src/libro_code_interpreter/: __init__.py  html_util.py  test.py  tool.py  utils.py
libro-execution-preview/: .umirc.ts  package.json  routes.ts  umi-plugin-html-config.ts
libro-execution-preview/src/: app.ts
libro-execution-preview/src/pages/libro/: app.ts  content-contribution.tsx  editor-contribution.tsx  index.less  index.tsx  preview.tsx
libro-execution-preview/src/pages/libro/empty-code-cell/: code-cell-contribution.ts  code-cell-view.tsx  module.ts
libro-execution-preview/typings/: index.d.ts
